# kspec_adc_controller

./: .coverage  README.md  changelog.md  coverage.xml  pyproject.toml  requirements-dev.txt
.github/workflows/: ruff-lint.yml  tests.yml
src/: 241119_test.ipynb  241227_homing.ipynb  action_test.ipynb  adc_actions.py  adc_calc_angle.py  adc_calculater.py  adc_controller.py  adc_logger.py  controller_test.ipynb  controller_test.py  home.txt  nanolib_helper.py  odscript.txt  test.ipynb
src/etc/: adc_config.json
src/kspec_adc_controller/: adc_actions.py  adc_calc_angle.py  adc_controller.py  adc_logger.py
src/legacy/: 260117_test copy.ipynb
src/test/: 241119_test.ipynb
tests/: conftest.py  test_adc_actions.py  test_adc_calc_angle.py  test_adc_controller.py  test_adc_logger.py
