[tool.poetry]
name = "kspec-adc-controller"
version = "0.1.0"
description = ""
authors = ["Mingyeong Yang"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.ruff]
exclude = [
  "src/legacy",
]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
